test/types/string/dmk/substring/substringBadRange-codepoint.good
str1[12:byteIndex..13:byteIndex] = lm
str2[12:codepointIndex..13:codepointIndex] = lm
substringBadRange-codepoint.chpl:8: error: halt reached - range out of bounds of string
